tests/a/tests/provenance/fail/fn/fn.1.stderr
error: expected (b,bin), found (bin,bin)
 --> tests/provenance/fail/fn/fn.1.rs:6:5
  |
6 |     x + 1
  |     ^^^^^
